Converting to local several module variables